--- a/README.adoc
+++ b/README.adoc
@@ -1,2 +1,12 @@
-final
+= TP Grupo 9
+
+Integrantes
+-Ferreyra Fernando
+-Goñez Elías
+-Oviedo Daniela
+-Segregin Romina
+
+:toc:
+:toc-title: Contenidos
+:numbered:
 
