--- a/README.adoc
+++ b/README.adoc
@@ -75,3 +75,7 @@ la base de datos relacional PostgreSQL. Por último, en BoltDB se guardan datos 
 
 == Problemas encontrados
 
+Un problema que se presento fue que cuando se intento hacer los triggers no se sabia como hacer para que recorra la tabla para tomar los valores de las fechas para comparar. En un principio se intento hacer una clausura que de las fechas que se pedia, pero no funciono. luego se obto por obtener todas las fechas de la tarjeta que se necesitaba en un record y hacerle un for para obtener cada fecha y comparar.
+
+Cuando se estaba haciendo el trigger de compras, que pasar hacer insert en la tabla alerta, como se necesita un nrorechazo y el trigger se activaba cuando se reliza una compra y no un rechazo, no teniamos el dato. Se soluciono dejandolo en null.
+
