--- a/README.adoc
+++ b/README.adoc
@@ -79,3 +79,5 @@ Un problema que se presento fue que cuando se intento hacer los triggers no se s
 
 Cuando se estaba haciendo el trigger de compras, que pasar hacer insert en la tabla alerta, como se necesita un nrorechazo y el trigger se activaba cuando se reliza una compra y no un rechazo, no teniamos el dato. Se soluciono dejandolo en null.
 
+otro problema encontrado fue a la hora de realizar la suma de las compras para autorizar la nueva compra, no estabamos verificando que el valor del campo monto se encuentre vacio y entonces tiraba error a la hora de calcular la suma total de las compras previas mas el valor del nuevo monto, la solución fue controlar que existan compras previas para una determinada tarjeta antes de realizar la suma.
+
