--- a/README.adoc
+++ b/README.adoc
@@ -65,26 +65,38 @@ Además se muestran los problemas encontrados con sus respectivas soluciones.
 
 == Desarrollo
 
-El sistema fue construido con los lenguajes Go y Pl/pgSQL. El modelo de datos relativa a tarjetas de créditos son almacenadas en 
-la base de datos relacional PostgreSQL. Por último, en BoltDB se guardan datos de clientes, comercios,
- tarjetas y compras para comparar el modelo relacional con un modelo relacional (NoSQL).
+El sistema fue construido con los lenguajes _Go_ y _Pl/pgSQL_. El modelo de datos relativa a tarjetas de créditos son almacenadas en 
+la base de datos relacional _PostgreSQL_. Por último, en _BoltDB_ se guardan datos de clientes, comercios,
+ tarjetas y compras para comparar el modelo relacional con un modelo no relacional (_NoSQL_).
 
-=== Pl/pgsSQL
+=== Funciones
 
+Las funciones creadas tienen como objetivo vincular al usuarie con la base de datos. La forma de interactuar es a través 
+de una interfaz de líneas de comandos.
 
+* _autorizar_compra_: 
+
+Recibe los datos de una posible compra (número de tarjeta, código de seguridad, número de comercio, 
+monto a pagar). La función retorna _true_ si se aprueba y _false_ si ocurre lo contrario.
+
+Para autorizar una compra la función controla que se cumplan los siguientes requisitos: 
 
 == Problemas encontrados
 
-Un problema que se presentó fue que cuando se intentó hacer los triggers no se sabía cómo hacer para que recorra
+* Un problema que se presentó fue que cuando se intentó hacer los triggers no se sabía cómo hacer para que recorra
  la tabla para tomar los valores de las fechas para comparar. En un principio se intentó hacer una clausura que dé las fechas 
  que se pedía, pero no funcionó. Luego se optó por obtener todas las fechas de la tarjeta que se necesitaba en un record y 
  hacerle un for para obtener cada fecha y comparar.
 
-Cuando se estaba haciendo el trigger de compras, que pasar hacer insert en la tabla alerta, como se necesita un nrorechazo y 
+* Cuando se estaba haciendo el trigger de compras, que pasar hacer insert en la tabla _alerta_, como se necesita un _nrorechazo_ y 
 el trigger se activaba cuando se reliza una compra y no un rechazo, no teníamos el dato. Se solucionó dejándolo en null.
 
-Otro problema encontrado fue a la hora de realizar la suma de las compras para autorizar la nueva compra, no estábamos 
-verificando que el valor del campo monto se encuentre vacío y entonces tiraba error a la hora de calcular la suma total de 
+* Otro problema encontrado fue a la hora de realizar la suma de las compras para autorizar la nueva compra, no estábamos 
+verificando que el valor del campo _monto_ se encuentre vacío y entonces tiraba error a la hora de calcular la suma total de 
 las compras previas mas el valor del nuevo monto, la solución fue controlar que existan compras previas para una determinada
  tarjeta antes de realizar la suma.
+ 
+== Comparación entre en SQL y NoSQL
+
+
 
