agrego comparacion relacional con no relacional

--- a/README.adoc
+++ b/README.adoc
@@ -283,7 +283,13 @@ de extraer la información necesaria para complatar las tablas _cabecera_ y _det
 Luego, comprendimos que esta forma no era la más óptima y decidimos ir seleccionando la información a medida que se consultaban las 
 tablas expuestas. De esta manera, el código presentado muestra una mayor claridad y compacidad.  
 
-=== Jason y bases de datos NoSQL
+=== JSON y bases de datos NoSQL
+
+Una de las diferencias entre los modelos de datos SQL y NoSQL radica en la forma de hacer consultas. En NoSQL puede ser más complejo
+agrupar elementos porque no hay relación. La forma de hacer consultas es a través de la clave y el valor.
+
+Otra diferencia es la manera de crear la estructura de datos. Por un lado tenemos la base de datos SQL donde se crean tablas
+que pueden estar relacionadas con otras. Y por el otro lado, la base de datos NoSQL se modela con elementos clave/valor.
 
 
 == Conclusión
